force-app/main/default/objects/Account_Territory_Fields__c/Account_Territory_Fields__c.object-meta.xml
<CustomObject>
    <label>Account Territory Fields</label>
    <nameField>
        <displayFormat>ATF-{00000}</displayFormat>
        <label>Account Territory Fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Territory Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>