force-app/main/default/objects/Account_Territory_Fields__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>HCP class derived from Potential and Penetration matrix. Set automatically on save.</description>
    <label>Classification</label>
    <length>1</length>
    <type>Text</type>
</CustomField>