force-app/main/default/objects/Account_Territory_Fields__c/fields/Has_KOLs__c.field-meta.xml
<CustomField>
    <fullName>Has_KOLs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this organization has affiliated key opinion leaders (HCO accounts only).</description>
    <label>Has KOLs</label>
    <type>Checkbox</type>
</CustomField>