force-app/main/default/objects/Account_Territory_Fields__c/fields/HCP_Classification__c.field-meta.xml
<CustomField>
    <fullName>HCP_Classification__c</fullName>
    <description>HCP classification (A1�C3). Uses the same global picklist as Promo Grid Class Targeting.</description>
    <inlineHelpText>Select the HCP classification code (A1�C3).</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HCP_Classification</valueSetName>
    </valueSet>
</CustomField>