force-app/main/default/objects/Account_Territory_Fields__c/fields/Is_KOL__c.field-meta.xml
<CustomField>
    <fullName>Is_KOL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the HCP is a Key Opinion Leader within this territory.</description>
    <label>Is KOL</label>
    <type>Checkbox</type>
</CustomField>