force-app/main/default/objects/Account_Territory_Fields__c/fields/Is_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Is_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the account is flagged as a speaker within this territory.</description>
    <label>Is Speaker</label>
    <type>Checkbox</type>
</CustomField>