force-app/main/default/objects/Account_Territory_Fields__c/fields/KOL_In_What__c.field-meta.xml
<CustomField>
    <fullName>KOL_In_What__c</fullName>
    <description>Why the HCP is flagged as a KOL in this territory.</description>
    <label>KOL Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>