force-app/main/default/objects/Account_Territory_Fields__c/fields/KOL_Profile__c.field-meta.xml
<CustomField>
    <fullName>KOL_Profile__c</fullName>
    <description>Profile of affiliated KOLs when the organization has KOLs (HCO accounts only).</description>
    <label>KOL Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>