force-app/main/default/objects/Account_Territory_Fields__c/fields/Matrix_Rating__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Rating__c</fullName>
    <description>Combined Potential and Penetration rating (e.g. A1, B2). Set automatically on save.</description>
    <label>Matrix Rating</label>
    <length>2</length>
    <type>Text</type>
</CustomField>