force-app/main/default/objects/Account_Territory_Fields__c/fields/Penetration__c.field-meta.xml
<CustomField>
    <fullName>Penetration__c</fullName>
    <description>Product penetration level within the territory.</description>
    <label>Penetration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>