force-app/main/default/objects/Account_Territory_Fields__c/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <description>HCP prescribing potential within the territory.</description>
    <label>Potential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>